Added : Navbar facility
Drop down and go up facility for navbar

--- a/src/main/resources/CSS/ViewPage.css
+++ b/src/main/resources/CSS/ViewPage.css
@@ -11,7 +11,7 @@ a {
 .header-common-left {
     padding-left: 75px;
     padding-right: 75px;
-    padding-top: 100px;
+    padding-top: 110px;
     padding-bottom: 20px;
     font-weight: bold;
     font-size: 50px;
@@ -21,11 +21,11 @@ a {
 .header-common-right {
     padding-left: 75px;
     padding-right: 75px;
-    padding-top: 100px;
+    padding-top: 110px;
     padding-bottom: 20px;
     font-weight: bold;
     font-size: 50px;
-    z-index: 2;
+    z-index: 1 !important;
     text-align: right;
 }
 
@@ -35,20 +35,24 @@ a {
     padding-left: 50px;
     padding-right: 50px;
     font-size: 20px;
-    z-index: 2;
+    z-index: 1;
     text-align: justify;
 }
 
 .header-section {
+    overflow: auto;
     border-bottom: solid black 1px;
     position: fixed;
+    padding: 10px;
     width: 100%;
     left: 0;
     top: 0;
     z-index: 99 !important;
-    background-color: white;
+    backdrop-filter: saturate(180%) blur(20px);
+    font-size: 20px;
     /*Flex details*/
     display: flex;
+    transition: 500ms;
     flex-direction: row;
     flex-wrap: wrap;
     justify-content: flex-end;
@@ -56,7 +60,35 @@ a {
 }
 
 .header-links {
+    display: block;
     color: black;
+    padding: 20px;
+    transition: 500ms;
+}
+
+.header-links:hover {
+    transform: scale(1.1);
+}
+
+.navbar-icon {
     padding: 30px;
-    font-size: 20px;
+    display: none;
+}
+
+@media only screen and (max-width:1250px) {
+    .header-section {
+        flex-direction: column;
+        justify-content: center;
+        align-items: flex-start;
+        font-size: 35px;
+    }
+    .navbar-icon {
+        display: flex
+    }
+    .header-links {
+        display: none;
+    }
+    .body-common {
+        padding-bottom: 300px;
+    }
 }
