--- a/src/main/resources/CSS/ViewPage.css
+++ b/src/main/resources/CSS/ViewPage.css
@@ -1,3 +1,5 @@
+/*~~~~~~~~~~~~~~~~~~~~~~~~ Common CSS ~~~~~~~~~~~~~~~~~~~~~~~*/
+
 html {
     scroll-behavior: smooth;
     font-family: 'Cagliostro', sans-serif;
@@ -7,6 +9,9 @@ a {
     color: black;
     text-decoration: none;
 }
+
+
+/*~~~~~~~~~~~~~~~~~~~~~~~~ Topic Headers ~~~~~~~~~~~~~~~~~~~~~~~*/
 
 .header-common-left {
     padding-left: 75px;
@@ -29,6 +34,9 @@ a {
     text-align: right;
 }
 
+
+/*~~~~~~~~~~~~~~~~~~~~~~~~ Topic Bodies ~~~~~~~~~~~~~~~~~~~~~~~*/
+
 .body-common {
     padding-top: 10px;
     padding-bottom: 500px;
@@ -38,6 +46,9 @@ a {
     z-index: 1;
     text-align: justify;
 }
+
+
+/*~~~~~~~~~~~~~~~~~~~~~~~~ Navbar ~~~~~~~~~~~~~~~~~~~~~~~*/
 
 .header-section {
     overflow: auto;
@@ -73,6 +84,28 @@ a {
 .navbar-icon {
     padding: 30px;
     display: none;
+}
+
+
+/*~~~~~~~~~~~~~~~~~~~~~~~~ Footer Section ~~~~~~~~~~~~~~~~~~~~~~~*/
+
+.footer-section {
+    border-top: solid black 1px;
+    position: fixed;
+    padding: 10px;
+    font-size: 25px;
+    left: 0;
+    bottom: 0;
+    width: 100%;
+    z-index: 99 !important;
+    backdrop-filter: saturate(180%) blur(20px);
+    /*Flex details*/
+    display: flex;
+    transition: 500ms;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: space-around;
+    align-items: flex-end;
 }
 
 @media only screen and (max-width:1250px) {
