--- a/src/main/resources/CSS/ViewPage.css
+++ b/src/main/resources/CSS/ViewPage.css
@@ -124,7 +124,7 @@ html {
     padding: 20px;
     flex-direction: column;
     flex-wrap: wrap;
-    justify-content: flex-start;
+    justify-content: space-around;
     font-size: 20px;
 }
 
@@ -142,8 +142,10 @@ html {
 }
 
 #lname {
-    height: 150px;
     margin-top: 10px;
+    resize: none;
+    color: var(--font-color);
+    background-color: var(--color-secondary);
 }
 
 #post_button {
@@ -175,7 +177,6 @@ html {
     /*Flex details*/
     display: flex;
     flex-direction: row;
-    flex-wrap: wrap;
     justify-content: space-around;
     align-items: center;
 }
@@ -207,6 +208,13 @@ html {
     }
     .thought-box {
         font-size: 50px;
+        height: auto;
         width: auto;
+    }
+    #post_button {
+        font-size: 50px;
+    }
+    #lname {
+        font-size: 50px;
     }
 }
