--- a/src/main/webapp/CSS/ViewPage.css
+++ b/src/main/webapp/CSS/ViewPage.css
@@ -89,6 +89,33 @@ a {
 }
 
 
+/*~~~~~~~~~~~~~ Skills and Projects CSS ~~~~~~~~~~~~~~~~~*/
+
+.snp {
+    padding-top: 30px;
+    padding-bottom: 250px;
+    padding-left: 50px;
+    padding-right: 50px;
+    font-size: 20px;
+    z-index: 1;
+    text-align: justify;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+.skill_item {
+    padding: 20px;
+    transition: 500ms;
+    cursor: pointer;
+}
+
+.skill_item:hover {
+    transform: scale(1.2);
+}
+
+
 /*~~~~~~~~~~~~~~~~~~~~~~~~ Navbar ~~~~~~~~~~~~~~~~~~~~~~~*/
 
 .header-section {
