--- a/src/main/webapp/CSS/ViewPage.css
+++ b/src/main/webapp/CSS/ViewPage.css
@@ -102,25 +102,11 @@ a {
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: center;
-}
-
-.skill_item {
-    padding: 20px;
-    transition: 500ms;
-    cursor: pointer;
-    display: flex;
-    font-size: 20px;
-    top: 0;
-    left: 0;
-    width: auto;
-    align-items: center;
-    justify-items: center;
+    justify-content: space-between;
 }
 
 .skill_icons {
     height: 90px;
-    width: 90px;
     transition: 500ms;
     padding: 20px;
 }
@@ -130,24 +116,34 @@ a {
 }
 
 .skill_item_group {
-    display: flex;
     height: 75px;
     padding: 10px;
-    position: relative;
-    width: auto;
+    display: flex;
     align-items: center;
     justify-items: center;
 }
 
+.skill_item {
+    padding: 20px;
+    transition: 500ms;
+    cursor: pointer;
+    font-size: 20px;
+    display: flex;
+    width: auto;
+    align-items: center;
+    justify-items: center;
+    position: relative;
+}
+
 .skill_icon_group {
     display: none;
-    z-index: 99 !important;
+    z-index: 50 !important;
     backdrop-filter: saturate(180%) blur(2px);
     align-items: center;
     justify-items: center;
     position: absolute;
-    top: 0;
-    left: -50px;
+    transform: translateX(-25%);
+    -webkit-transform: translateX(-25%);
 }
 
 
