--- a/src/main/webapp/CSS/ViewPage.css
+++ b/src/main/webapp/CSS/ViewPage.css
@@ -8,7 +8,7 @@
 }
 
 .theme-dark {
-    --color-secondary: #16191a;
+    --color-secondary: #3d484c;
     --font-color: #ffffff;
     --thought-box-theme: #253534;
     --link-color: #f8f8af;
@@ -127,7 +127,6 @@ a {
     padding: 20px;
     transition: 500ms;
     cursor: pointer;
-    font-size: 20px;
     display: flex;
     width: auto;
     align-items: center;
@@ -311,5 +310,8 @@ a {
         justify-content: space-between;
         flex-direction: column;
         align-items: center;
+    }
+    .skill_item {
+        font-size: 30px;
     }
 }
