Added : Leetcode data postprocess
Postprocess received Leetcode response to extract required information

--- a/src/main/webapp/CSS/ViewPage.css
+++ b/src/main/webapp/CSS/ViewPage.css
@@ -92,10 +92,7 @@ a {
 /*~~~~~~~~~~~~~ Skills and Projects CSS ~~~~~~~~~~~~~~~~~*/
 
 .snp {
-    padding-top: 30px;
-    padding-bottom: 250px;
-    padding-left: 50px;
-    padding-right: 50px;
+    padding: 50px;
     font-size: 20px;
     z-index: 1;
     text-align: justify;
