--- a/src/main/webapp/CSS/ViewPage.css
+++ b/src/main/webapp/CSS/ViewPage.css
@@ -212,6 +212,42 @@ a {
 }
 
 
+/*~~~~~~~~~~~~~~~~~~~~~~~~ Github Data ~~~~~~~~~~~~~~~~~~~~~~~*/
+
+#github_projects {
+    display: flex;
+    justify-content: center;
+    padding: 0 50px 0 50px;
+}
+
+#customers {
+    border-collapse: collapse;
+}
+
+#customers td,
+#customers th {
+    border: 1px solid var(--font-color);
+    padding: 8px;
+    text-align: center;
+    font-size: 20px;
+    color: var(--font-color);
+}
+
+#customers tr:nth-child(even) {
+    background-color: #c29f9f;
+}
+
+#customers tr:hover {
+    background-color: rgb(187, 197, 122);
+}
+
+#customers th {
+    padding-top: 12px;
+    padding-bottom: 12px;
+    background-color: #007bb9;
+}
+
+
 /*~~~~~~~~~~~~~~~~~~~~~~~~ Navbar ~~~~~~~~~~~~~~~~~~~~~~~*/
 
 .header-section {
