--- a/src/main/webapp/CSS/ViewPage.css
+++ b/src/main/webapp/CSS/ViewPage.css
@@ -37,6 +37,48 @@ a {
 }
 
 
+/*~~~~~~~~~~~~~~~~~~~~~~~~ Navbar ~~~~~~~~~~~~~~~~~~~~~~~*/
+
+.header-section {
+    overflow: auto;
+    border-bottom: solid var(--font-color) 1px;
+    position: fixed;
+    padding: 10px;
+    width: 100%;
+    left: 0;
+    top: 0;
+    z-index: 99 !important;
+    backdrop-filter: saturate(180%) blur(20px);
+    font-size: 20px;
+    /*Flex details*/
+    display: flex;
+    transition: 500ms;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: flex-end;
+    align-items: flex-end;
+}
+
+.header-links {
+    color: var(--font-color);
+    text-decoration: none;
+    display: block;
+    padding: 20px;
+    transition: 500ms;
+    cursor: pointer;
+}
+
+.header-links:hover {
+    transform: scale(1.1);
+}
+
+.navbar-icon {
+    padding: 30px;
+    display: none;
+    transform: scale(2.0);
+}
+
+
 /*~~~~~~~~~~~~~~~~~~~~~~~~ Topic Headers ~~~~~~~~~~~~~~~~~~~~~~~*/
 
 .header-common-left {
@@ -149,34 +191,6 @@ a {
     position: absolute;
 }
 
-.error_api {
-    text-align: center;
-    vertical-align: middle;
-    font-size: 40px;
-    height: 360px;
-    margin: 50px;
-}
-
-#leetcode_error {
-    background: linear-gradient(var(--error-backgrounds), var(--error-backgrounds)), url('../assets/leetcode.png');
-    background-repeat: no-repeat;
-    background-size: contain;
-    background-position: center;
-    display: none;
-    justify-content: center;
-    align-items: center;
-}
-
-#github_error {
-    background: linear-gradient(var(--error-backgrounds), var(--error-backgrounds)), url('../assets/Github.png');
-    background-repeat: no-repeat;
-    background-size: contain;
-    background-position: center;
-    display: none;
-    justify-content: center;
-    align-items: center;
-}
-
 
 /*~~~~~~~~~~~~~~~~~~~~~~~~ Leetcode data ~~~~~~~~~~~~~~~~~~~~~~~*/
 
@@ -260,7 +274,7 @@ a {
     border: 1px solid var(--font-color);
     padding: 8px;
     text-align: center;
-    font-size: 20px;
+    font-size: 25px;
     color: var(--font-color);
 }
 
@@ -279,45 +293,34 @@ a {
 }
 
 
-/*~~~~~~~~~~~~~~~~~~~~~~~~ Navbar ~~~~~~~~~~~~~~~~~~~~~~~*/
+/*~~~~~~~~~~~~~~~~~~~~~~~~ Error Divs ~~~~~~~~~~~~~~~~~~~~~~~*/
 
-.header-section {
-    overflow: auto;
-    border-bottom: solid var(--font-color) 1px;
-    position: fixed;
-    padding: 10px;
-    width: 100%;
-    left: 0;
-    top: 0;
-    z-index: 99 !important;
-    backdrop-filter: saturate(180%) blur(20px);
-    font-size: 20px;
-    /*Flex details*/
+.error_api {
+    text-align: center;
+    vertical-align: middle;
+    font-size: 40px;
+    height: 360px;
+    margin: 50px;
+}
+
+#leetcode_error {
+    background: linear-gradient(var(--error-backgrounds), var(--error-backgrounds)), url('../assets/leetcode.png');
+    background-repeat: no-repeat;
+    background-size: contain;
+    background-position: center;
     display: flex;
-    transition: 500ms;
-    flex-direction: row;
-    flex-wrap: wrap;
-    justify-content: flex-end;
-    align-items: flex-end;
+    justify-content: center;
+    align-items: center;
 }
 
-.header-links {
-    color: var(--font-color);
-    text-decoration: none;
-    display: block;
-    padding: 20px;
-    transition: 500ms;
-    cursor: pointer;
-}
-
-.header-links:hover {
-    transform: scale(1.1);
-}
-
-.navbar-icon {
-    padding: 30px;
-    display: none;
-    transform: scale(2.0);
+#github_error {
+    background: linear-gradient(var(--error-backgrounds), var(--error-backgrounds)), url('../assets/Github.png');
+    background-repeat: no-repeat;
+    background-size: contain;
+    background-position: center;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 
@@ -402,6 +405,9 @@ a {
     justify-content: space-around;
     align-items: center;
 }
+
+
+/*~~~~~~~~~~~~~~~~~~~~~~~~ Response Section ~~~~~~~~~~~~~~~~~~~~~~~*/
 
 @media only screen and (max-width:1250px) {
     .header-section {
