--- a/src/main/webapp/CSS/ViewPage.css
+++ b/src/main/webapp/CSS/ViewPage.css
@@ -550,6 +550,12 @@ a {
     align-items: center;
 }
 
+.meme_div {
+    height: auto;
+    width: 50%;
+    padding: 10px 25%;
+}
+
 
 /*~~~~~~~~~~~~~~~~~~~~~~~~ Thought Box ~~~~~~~~~~~~~~~~~~~~~~~*/
 
@@ -706,5 +712,9 @@ a {
     }
     .game_group {
         flex-direction: column;
+    }
+    .meme_div {
+        width: 75%;
+        padding: 10px 12.5%;
     }
 }
