--- a/src/main/webapp/CSS/ViewPage.css
+++ b/src/main/webapp/CSS/ViewPage.css
@@ -38,6 +38,32 @@ a {
     padding-bottom: 250px;
 }
 
+.help_div {
+    position: fixed;
+    display: block;
+    z-index: 1 !important;
+    background: var(--color-secondary);
+    height: 100vh;
+    width: 99%;
+    margin: 0px;
+}
+
+#top_help {
+    position: fixed;
+    top: 15%;
+    left: 20%;
+    font-size: 50px;
+    margin: 0px;
+}
+
+#bottom_help {
+    position: fixed;
+    bottom: 15%;
+    left: 40%;
+    font-size: 50px;
+    margin: 0px;
+}
+
 
 /*~~~~~~~~~~~~~~~~~~~~~~~~ Navbar ~~~~~~~~~~~~~~~~~~~~~~~*/
 
@@ -716,5 +742,11 @@ a {
     .meme_div {
         width: 75%;
         padding: 10px 12.5%;
+    }
+    #top_help {
+        top: 7.5%;
+    }
+    #bottom_help {
+        bottom: 5%;
     }
 }
