--- a/src/main/webapp/CSS/ViewPage.css
+++ b/src/main/webapp/CSS/ViewPage.css
@@ -40,7 +40,7 @@ a {
 
 .help_div {
     position: fixed;
-    display: block;
+    display: none;
     z-index: 1 !important;
     background: var(--color-secondary);
     height: 100vh;
