--- a/src/main/webapp/CSS/CommonUtils.css
+++ b/src/main/webapp/CSS/CommonUtils.css
@@ -199,11 +199,11 @@ a {
     font-size: 20px;
     width: auto;
     color: var(--font-color);
-    border-radius: 5px;
+    border-radius: 10px;
     padding: 5px;
     text-align: center;
     background-color: var(--color-secondary);
-    border: none;
+    border: 2px solid var(--font-color);
     cursor: pointer;
 }
 
