Added : Skill set URLs
Problem faced was clicking on any topic was opening the image underneath.
Solved by removing a disable class when selected post a delay, and then re-adding it back when the option deselected

--- a/src/main/webapp/CSS/CommonUtils.css
+++ b/src/main/webapp/CSS/CommonUtils.css
@@ -41,6 +41,10 @@ a {
     color: var(--link-color);
 }
 
+img {
+    text-align: center;
+}
+
 .generic_div {
     display: block;
     padding-bottom: 250px;
