Refactored : Modified bugs
Removed transparent header and footer to comply with safari browsers

--- a/src/main/webapp/CSS/CommonUtils.css
+++ b/src/main/webapp/CSS/CommonUtils.css
@@ -186,8 +186,8 @@ span:before {
     left: 0;
     top: 0;
     z-index: 99 !important;
-    backdrop-filter: saturate(180%) blur(20px);
     font-size: 20px;
+    background-color: var(--color-secondary);
     /*Flex details*/
     display: flex;
     transition: 500ms;
@@ -328,7 +328,7 @@ span:before {
     bottom: 0;
     width: 100%;
     z-index: 99 !important;
-    backdrop-filter: saturate(180%) blur(20px);
+    background-color: var(--color-secondary);
     /*Flex details*/
     display: flex;
     flex-direction: row;
