--- a/src/main/webapp/CSS/Contact.css
+++ b/src/main/webapp/CSS/Contact.css
@@ -2,7 +2,10 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    background-color: rgb(0, 113, 85);
+    background-color: #c96bb8;
+    width: 90%;
+    margin: auto;
+    padding: 20px;
 }
 
 .contact-box {
@@ -15,7 +18,7 @@
 .contact-links,
 .contact-form-wrapper {
     width: 100%;
-    padding: 8% 5% 10% 5%;
+    padding: 20px;
 }
 
 .contact-links {
@@ -27,36 +30,6 @@
 .contact-form-wrapper {
     background-color: #c96bb8;
     border-radius: 0 10px 10px 0;
-}
-
-@media only screen and (max-width:1250px) {
-    .contact-links,
-    .contact-form-wrapper {
-        width: 100%;
-    }
-    #contact {
-        flex-direction: column;
-    }
-}
-
-@media only screen and (max-width: 800px) {
-    .contact-links,
-    .contact-form-wrapper {
-        width: 100%;
-    }
-    .contact-links {
-        border-radius: 10px 10px 0 0;
-    }
-    .contact-form-wrapper {
-        border-radius: 0 0 10px 10px;
-    }
-}
-
-@media only screen and (max-width: 400px) {
-    .contact-box {
-        width: 95%;
-        margin: 8% 5%;
-    }
 }
 
 h2 {
@@ -160,13 +133,23 @@ textarea:valid+label {
     height: 75%;
 }
 
-@media only screen and (max-width: 800px) {
-    h2 {
-        font-size: clamp(40px, 10vw, 60px);
+@media only screen and (max-width:1250px) {
+    .contact-links,
+    .contact-form-wrapper {
+        width: 100%;
+        border-radius: 10px 10px 0 0;
+        font-size: 40px;
     }
-}
-
-@media only screen and (max-width: 400px) {
+    #contact {
+        flex-direction: column;
+    }
+    .contact-form-wrapper {
+        border-radius: 0 0 10px 10px;
+    }
+    .contact-box {
+        width: 95%;
+        margin: 8% 5%;
+    }
     h2 {
         font-size: clamp(30px, 12vw, 60px);
     }
@@ -176,5 +159,8 @@ textarea:valid+label {
     .image {
         width: 38px;
         height: 38px;
+    }
+    .input_fields {
+        font-size: 40px;
     }
 }
