--- a/src/main/webapp/CSS/Contact.css
+++ b/src/main/webapp/CSS/Contact.css
@@ -2,10 +2,10 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    background-color: #c96bb8;
     width: 90%;
     margin: auto;
     padding: 20px;
+    border-radius: 20px;
 }
 
 .contact-box {
@@ -24,12 +24,11 @@
 .contact-links {
     background-color: #1f2e43;
     background: radial-gradient( circle at 55% 92%, #426691 0 12%, transparent 12.2%), radial-gradient( circle at 94% 72%, #426691 0 10%, transparent 10.2%), radial-gradient( circle at 20% max(78%, 350px), #263a53 0 7%, transparent 7.2%), radial-gradient( circle at 0% 0%, #263a53 0 40%, transparent 40.2%), #1f2e43;
-    border-radius: 10px 0 0 10px;
+    border-radius: 10px;
 }
 
 .contact-form-wrapper {
-    background-color: #c96bb8;
-    border-radius: 0 10px 10px 0;
+    border-radius: 10px;
 }
 
 h2 {
@@ -77,7 +76,7 @@ label {
     position: absolute;
     top: 10px;
     left: 2%;
-    color: #999;
+    color: rgb(0, 0, 0);
     font-size: clamp(14px, 1.5vw, 18px);
     pointer-events: none;
     user-select: none;
@@ -87,7 +86,7 @@ input,
 textarea {
     width: 100%;
     outline: 0;
-    border: 1px solid #ccc;
+    border: solid var(--font-color) 2px;
     border-radius: 4px;
     margin-bottom: 20px;
     padding: 12px;
@@ -99,7 +98,7 @@ input:valid+label,
 textarea:focus+label,
 textarea:valid+label {
     font-size: clamp(13px, 1.3vw, 16px);
-    color: #777;
+    color: rgb(0, 0, 0);
     top: -20px;
     transition: all .225s ease;
 }
