--- a/src/main/webapp/CSS/SkillsNProfiles.css
+++ b/src/main/webapp/CSS/SkillsNProfiles.css
@@ -64,7 +64,6 @@
     flex-direction: row;
     justify-content: space-evenly;
     align-items: center;
-    font-size: 20px;
 }
 
 .progress {
@@ -195,11 +194,16 @@
 @media only screen and (max-width:1250px) {
     .skill_item {
         font-size: 30px;
+        font-size: 35px;
     }
     #progress_bar_container {
         flex-direction: column;
+        font-size: 35px;
     }
     .timeline::after {
         left: 31px;
+    }
+    .category_class {
+        font-size: 35px;
     }
 }
