Refactored : Modified code to improve readability

--- a/src/main/webapp/CSS/SkillsNProfiles.css
+++ b/src/main/webapp/CSS/SkillsNProfiles.css
@@ -58,6 +58,11 @@
 
 /*~~~~~~~~~~~~~~~~~~~~~~~~ Leetcode data ~~~~~~~~~~~~~~~~~~~~~~~*/
 
+.coding_block {
+    position: relative;
+    padding: 100px;
+}
+
 #progress_bar_container {
     padding: 50px;
     display: flex;
