--- a/src/main/webapp/CSS/Contact.css
+++ b/src/main/webapp/CSS/Contact.css
@@ -103,8 +103,8 @@ textarea:valid+label {
     color: #fff;
     font-size: clamp(16px, 1.6vw, 18px);
     display: block;
-    padding: 12px 20px;
-    margin: 2px auto;
+    padding: 20px;
+    margin: 10px auto;
     border: none;
     border-radius: 4px;
     cursor: pointer;
@@ -161,4 +161,10 @@ textarea:valid+label {
     text-align: center;
     opacity: 0;
     transition: 500ms;
+}
+
+#name_error,
+#mail_error,
+#message_error {
+    color: red;
 }
