--- a/src/main/webapp/CSS/CommonUtils.css
+++ b/src/main/webapp/CSS/CommonUtils.css
@@ -216,6 +216,22 @@ span:before {
     transform: scale(2.0);
 }
 
+.theme_bulb {
+    position: fixed;
+    top: 12.5%;
+    right: 10%;
+    transform: scale(2) rotate(180deg);
+    z-index: 98 !important;
+}
+
+.theme_chain {
+    position: fixed;
+    top: 20%;
+    right: 5%;
+    transform: scale(5);
+    z-index: 98 !important;
+}
+
 
 /*~~~~~~~~~~~~~~~~~~~~~~~~ Topic Headers ~~~~~~~~~~~~~~~~~~~~~~~*/
 
@@ -386,5 +402,14 @@ span:before {
     }
     #bottom_help {
         bottom: 5%;
+    }
+    .theme_bulb {
+        top: 0;
+        z-index: 198 !important;
+    }
+    .theme_chain {
+        top: 5%;
+        transform: scale(7.5);
+        z-index: 198 !important;
     }
 }
