--- a/src/main/webapp/CSS/Summary.css
+++ b/src/main/webapp/CSS/Summary.css
@@ -19,6 +19,11 @@
     clip-path: polygon(25% 0%, 75% 0%, 100% 50%, 75% 100%, 25% 100%, 0% 50%);
 }
 
+#display_pic {
+    width: 300px;
+    height: 300px;
+}
+
 @media only screen and (max-width:1250px) {
     .summary {
         flex-direction: column;
