--- a/src/frontend/src/Components/Casual/Casual.css
+++ b/src/frontend/src/Components/Casual/Casual.css
@@ -1,8 +1,9 @@
 /*~~~~~~~~~~~~~~~~~~~~~~~~ Casual section ~~~~~~~~~~~~~~~~~~~~~~~*/
 
 .body-common {
-    width: 100%;
+    height: 100%;
     text-align: justify;
+    font-family: 'Andika', sans-serif;
 }
 
 .game_group {
@@ -18,8 +19,8 @@
     width: 400px;
     margin: 30px;
     transition: 500ms;
-    border-radius: 30px;
-    border: 3px solid var(black)
+    border-radius: 20px;
+    border: 2px solid black
 }
 
 .game_img:hover {
