--- a/src/frontend/src/Components/SkillProject/SkillsNProfiles.css
+++ b/src/frontend/src/Components/SkillProject/SkillsNProfiles.css
@@ -1,7 +1,33 @@
+/*~~~~~~~~~~~~~~~~~~~~~~~~ Carusol card ~~~~~~~~~~~~~~~~~~~~~~~~*/
+
+.imageProperties{
+    height: 90vh;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-evenly;
+  }
+
+  .Header{
+    padding: 30px;
+    font-size: 70px;
+    font-weight: bold;
+    color: white;
+  }
+
+  .Info{
+    padding: 30px;
+    font-size: 25px;
+    color: white;
+    word-wrap: normal;
+    white-space:normal;
+  }
+
+/*~~~~~~~~~~~~~~~~~~~~~~~~ Carusol omni ~~~~~~~~~~~~~~~~~~~~~~~~*/
+
 .slideshow {
-    margin: 0 auto;
     overflow: hidden;
-    max-width: 75vw;
+    max-width: 80vw;
   }
   
   .slideshowSlider {
@@ -11,8 +37,7 @@
   
   .slide {
     display: inline-block;
-  
-    height: 400px;
+    height: 90vh;
     width: 100%;
   }
   
@@ -26,11 +51,9 @@
     display: inline-block;
     height: 10px;
     width: 10px;
-    border-radius: 50%;
-  
+    border-radius: 50%;  
     cursor: pointer;
-    margin: 15px 7px 0px;
-  
+    margin: 15px 7px 10px;
     background-color: #c4c4c4;
   }
   
@@ -44,7 +67,7 @@
 .body-common {
     height: 100%;
     text-align: justify;
-    font-family: 'Andika', sans-serif;
+    font-family: 'Lato', sans-serif;
 }
 
 .snp {
@@ -57,22 +80,23 @@
 }
 
 .skill_icons {
-    height: 90px;
-    width: 90px;
+    height: 150px;
+    width: 150px;
     transition: 500ms;
-    padding: 20px;
+    padding: 30px;
 }
 
 .skill_icons:hover {
-    transform: scale(1.2);
+    transform: scale(1.1);
+    cursor: pointer;
 }
 
 .skill_item_group {
-    height: 150px;
-    padding: 10px;
     display: flex;
     align-items: center;
     justify-items: center;
+
+    justify-content: space-evenly;
 }
 
 .skill_item {
