--- a/src/frontend/src/Components/SkillProject/SkillsNProfiles.css
+++ b/src/frontend/src/Components/SkillProject/SkillsNProfiles.css
@@ -1,3 +1,25 @@
+.githubCardParent{
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: space-evenly;
+}
+
+.githubCard{
+    height: 200px;
+    transition: 500ms;
+    width: 400px;
+    display: block;
+    border: solid 2px black;
+    border-radius: 30px;
+    margin: 30px;
+}
+
+.githubCard:hover {
+    cursor: pointer;
+}
+
 /*~~~~~~~~~~~~~~~~~~~~~~~~ Carusol card ~~~~~~~~~~~~~~~~~~~~~~~~*/
 
 .imageProperties{
@@ -50,8 +72,8 @@
   .slideshowDot {
     display: inline-block;
     height: 10px;
-    width: 10px;
-    border-radius: 50%;  
+    width: 40px;
+    border-radius: 30%;  
     cursor: pointer;
     margin: 15px 7px 10px;
     background-color: #c4c4c4;
@@ -155,7 +177,7 @@
 
 .category_class {
     font-size: 20px;
-    padding: 30px;
+    padding: 20px;
     transition: 500ms;
     cursor: pointer;
 }
